samples/_failures_safe/1761555204_64fd2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_557a8b4d.c: In function ‘main’:
./samples/SAFE/__tmp_557a8b4d.c:135:5: error: expected declaration or statement at end of input
  135 |     for (int i = 0; i < num_edges; i++) {
      |     ^~~
./samples/SAFE/__tmp_557a8b4d.c:135:5: error: expected declaration or statement at end of input
